# MetaProgrammingCPP

./: README.md
Chapter1/: CMakeLists.txt  main.cpp
Chapter2/: CMakeLists.txt  main.cpp
Chapter3/: CMakeLists.txt
Chapter4/: CMakeLists.txt  main.cpp
Chapter5/: CMakeLists.txt  main.cpp
Chapter6/: CMakeLists.txt  main.cpp
Chapter7/: CMakeLists.txt  main.cpp
Chapter8/: CMakeLists.txt  main.cpp
Chapter9/: CMakeLists.txt  main.cpp
CompTimeBFCompiler/: main.cpp
CompTimeHashMap/: CMakeLists.txt  constexpr_hashmap.hpp  main.cpp
ConstevalInvoke/: consteva_invoke.hpp
ConstexprRange/: constexpr_range.hpp  example.cpp  get_element.hpp
ConstexprSwitch/: constant_parmater.hpp  constexpr_switch.hpp
Constructable_With/: constructable_with.hpp  main.cpp
Count_If/: count_if.hpp  main.cpp
Counter/: main.cpp
Curry/: curry.hpp  main.cpp
Describe/: descride.hpp
DiffEq/: CMakeLists.txt  diff_methods.hpp  example.cpp  main.cpp
Dynamic_optional/: dynamic_optional.hpp
FMap/: CMakeLists.txt  fmap.hpp  main.cpp
Factorial/: non_constexpr.cpp  with_constexpr.cpp
FizzBuzz/: main.cpp
Functional/: func.hpp  func.ixx
GADT/: CMakeLists.txt  gadt.hpp  main.cpp
IsAmong/: is_among.hpp
IsDetected/: main.cpp
IsSpecialization/: is_specialization.hpp  main.cpp
IsUniqueTuple/: unique_tuple.hpp
Is_Awaitable/: main.cpp
Is_Fundamental/: CMakeLists.txt  is_fundamental.hpp  main.cpp
Is_Iterable/: main.cpp
Is_Lambda/: is_lambda.hpp
Is_Printable/: is_printable.hpp  main.cpp
Is_Smart_Pointer/: is_smart_pointer.hpp  main.cpp
Is_Something/: meta.hpp
Is_UniqueTuple/: main.cpp
Is_string(view)/: main.cpp
Lambda/: lambda.hpp  main.cpp
Lambda_Coros/: lambda_coros.hpp  main.cpp
Lambda_utils/: lambda_utils.hpp  main.cpp
ListIntersection/: intersection.hpp  main.cpp
Macro_rules/src/: CMakeLists.txt  main.cpp
Macro_rules/src/meta/: const_string.hpp  expressions.hpp  meta.hpp  meta_rules.hpp  static_vector.hpp  token_stream.hpp  types.hpp
MakeString/: CMakeLists.txt  SimpleTypeTrait.cpp  makeString.hpp
Mandelbrot/: how_to_compile.txt  main.cpp
Matrix_lib/: Shizmatrix.hpp  shizmatrix.hpp  test.cpp
Move/: main.cpp  my_move.hpp  remove_reference.hpp
NumerosMetafunc/: main.cpp
ODE/: DynamicSystem.hpp  OdeIndexMap.hpp  StateAccesor.hpp  States.hpp  main.cpp
PathFinding/: CMakeLists.txt  (+2 more)
PatternMatch/: CMakeLists.txt
PatternMatch/demos/: customize_match_for_variant.cpp  match_any.cpp  match_polyobj.cpp  overload.cpp
PatternMatch/include/pm/: type_hierarchy.h
PatternMatch/include/pm/functional/: match.h  matchable_any.h  overload.h  signature.h
PatternMatch/include/pm/meta/: bools.h  dispatch.h  fold_add.h  fold_and.h  fold_or.h  scan_add.h  try_catch.h
PatternMatch/tests/: match.test.cpp  match_any.test.cpp  meta.test.cpp  overload.test.cpp  signature.test.cpp  type_hierarchy.test.cpp
(+47 files in other folders)
